Return instance URL when creation was successful
